@@ -1,0 +1,21 @@
+<?xml version="1.0"?>
+<object
+    name="portal_controlpanel"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="medialog.googlefonts"
+    purge="False">
+
+    <configlet
+        title="Googlefont Settings"
+        action_id="medialog_controlpanel"
+        appId="medialog.controlpanel"
+        category="Products"
+        condition_expr=""
+        url_expr="string:${portal_url}/@@medialog_controlpanel"
+        visible="True"
+        i18n:attributes="title">
+            <permission>Manage portal</permission>
+    </configlet>
+
+</object>
+
